Fixes #840 - Linkbuttons in action buttons small spacing issues

--- a/docroot/sites/all/themes/warmshowers_zen/sass/components/pages/_forum.scss
+++ b/docroot/sites/all/themes/warmshowers_zen/sass/components/pages/_forum.scss
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 /***
 * Advanced Forum theming
 * I gave up trying to create a proper Advance Forum theme
@@ -303,7 +296,7 @@ div.forum-post {
 
 			.post-edited {
 				padding: $forum-spacing;
-			}
+				margin: 0;			}
 
 		}
 
@@ -398,7 +391,8 @@ a.af-button-small:link,
 a.af-button-small:visited,
 a.author-pane-link,
 a.author-pane-link:link,
-a.author-pane-link:visited {
+a.author-pane-link:visited,
+a.privatemsg-send-link {
   //color: $forum-accent-color;
   text-decoration: none;
 }
@@ -406,7 +400,8 @@ a.author-pane-link:visited {
 .af-button-large,
 .af-button-small,
 .author-pane-link,
-div.forum-post a.linkbutton {
+div.forum-post a.linkbutton,
+div.forum-post a.privatemsg-send-link {
   border: 1px solid $forum-accent-color;
   background: transparent;
   color: $forum-accent-color;
@@ -415,6 +410,7 @@ div.forum-post a.linkbutton {
   text-shadow: none;
   text-decoration: none;
   vertical-align: middle;
+  line-height: 1.2em;
 
   padding: 4px;
   margin: 0;
